# ml-system-design-aith

./: .gitignore  .pre-commit-config.yaml  README.md  exmaple.env  main.py  pyproject.toml  split.py
app/: docker-compose.yml  learning.ipynb  main.py  settings.py
app/com_app/: com_data.py
app/db_ops/: connector.py  db_create.py
app/ml_app/: crop_vid.py  detection_results.csv  ml_data.py  stlit2.py  test_ml_old.ipynb
app/queries/: create_tables.sql  current_tracks.sql  last_anomaly.sql
app/routers/: data_router.py  models.py  signal_router.py  trip_router.py
app/routers/metrics/: metrics_methods.py  metrics_router.py
custom_inference/: ocr_inference.py  yolo_inference.py
docs/: ml_system_design_doc.md
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
training/: README.md  import streamlit as st.py  learning.ipynb  stlit.py  test_ml.ipynb
training/comparsion/: comparsion_ocr.ipynb  comparsion_yolo.ipynb  ocr_comparsion_metrics.csv  ocr_comparsion_results.csv  yolo_comparison_results.csv
training/data_preparing/: split.py  streamlit_ocr.py  streamlit_yolo.py
training/metrics/cv/: args.yaml  results.csv
training/metrics/ocr/: log_dataset.txt  log_train.txt  opt.txt
training/training/: learning_ocr.ipynb  learning_yolo.ipynb  results.txt
