[tool.poetry]
name = "ml-system-design-aith"
version = "2.25.2"
description = ""
authors = ["erofdmit <erofeevdma@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.11.9"
streamlit = "^1.41.1"
plotly = "^5.24.1"
streamlit-aggrid = "^1.1.0"
fastapi = "^0.110"
ultralytics = "^8.3.102"
numpy = "1.26.4"
opencv-python = "^4.11.0.86"
pygments = "^2.19.1"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
